--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Nunito&display=swap" rel="stylesheet"> -->
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
+
 
   </head>
   <body>
